# rust-yscraper

./: .gitignore  .output.txt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Guidelines.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PLAN.md  README.md  TODO.md  comprehensive_test.sh  config.properties  dev.sh  docker-compose.yml  full_diff.patch  generate-k8s-output.sh  liquibase.properties.example  manual_test.http  openapi.yaml  test_api.sh  webapp.md
.claude/: settings.json
.claude/hooks/: post-edit-test.sh
.github/workflows/: coverage.yml  docker-build.yml  liquibase-build.yml  webapp-build.yml  yscraper.yml
.junie/: guidelines.md
.serena/: project.yml
.serena/memories/: architecture.md  coding_conventions.md  project_overview.md  suggested_commands.md  task_completion_steps.md
api_gen/: Cargo.toml  openapi.json
api_gen/src/: main.rs
conductor/: product-guidelines.md  product.md  tracks.md  workflow.md
conductor/code_styleguides/: rust.md
conf/: config.properties  config.toml
contributing/: product.md  tech-stack.md
db/: Dockerfile
db/changelog/: 001_init.sql  002_add_scheduling.sql  003_add_comment_count.sql  004_add_comment_state.sql  005_add_subcomment_count.sql  006_add_thread_month_year.sql  007_add_discarded_comment_count.sql  db.changelog-master.yaml
design/: code.html
docs/: mutation-result.md  testing_eval.md
docs/adrs/: 0001-store-comment-count-in-urls-table.md
docs/dynamodb/: schema-proposals.md
k8s/base/: ingress.yaml  kustomization.yaml  liquibase-job.yaml  web-server-deployment.yaml  web-server-service.yaml  webapp-deployment.yaml  webapp-service.yaml
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
openspec/: config.yaml
src/: api.rs  config.rs  db.rs  lib.rs  main.rs  scrape.rs  task_queue.rs  utils.rs
tests/: list_comments_integration.rs  ping_integration.rs
web_server/: Cargo.toml  build.rs  config.toml
web_server/src/: background_scheduler.rs  config.rs  db.rs  lib.rs  main.rs  scrape.rs  scrape_task.rs  task_queue.rs  utils.rs
web_server/src/api/: app_state.rs  auth.rs  comments.rs  common.rs  info.rs  links.rs  mod.rs  ping.rs  scrape_task.rs
web_server/src/db/: comments_repository.rs  links_repository.rs  mod.rs  postgresql.rs
web_server/src/middleware/: auth.rs
web_server/tests/: comments_api_test.rs  links_api_test.rs  ping_integration.rs  postgresql_test.rs  sorting_test.rs
web_server/tests/common/: mod.rs
web_server/tests/fixtures/: hn_first_invalid_second_ok.html  hn_happy_root_and_child.html  hn_subcomments.html
webapp/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
webapp3/: give_a_one_page_explanation_of_what_is_h.md  index.html  package-lock.json  package.json  vite.config.ts
(+163 files in other folders)
